# spectral_connectivity

./: .gitignore  .mailmap  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  Makefile  OPTIMIZATION_PLAN.md  README.md  REVIEW_HETTINGER.md  TASKS.md  UX_REVIEW.md  coverage.lcov  environment.yml  paper.bib  paper.md  pyproject.toml  setup.py
.claude/agents/: scientific-ux-reviewer.md  spectral-code-reviewer.md
.claude/commands/: freshstart.md
.github/workflows/: PR-test.yml  draft-pdf.yml  release.yml
conda-recipe/: README.md  build.sh  meta.yaml
docs/: CONNECTIVITY_METRIC_RANGES.md  Makefile  NOTEBOOK_SNAPSHOT_TESTS.md  STYLE.md  api.rst  conf.py  contributing.md  index.md  index.rst  make.bat  requirements-docs.txt  tutorials.rst
docs/examples/: README.md  Tutorial_On_Simulated_Examples.ipynb
docs/source/: modules.rst  spectral_connectivity.rst
examples/: Intro_tutorial.ipynb  Intro_tutorial.py  Tutorial_On_Simulated_Examples.ipynb  Tutorial_On_Simulated_Examples.py  Tutorial_Using_Paper_Examples.ipynb  Tutorial_Using_Paper_Examples.py
spectral/: __init__.py  connectivity.py
spectral-connectivity/: minimum_phase_decomposition.py
spectral_connectivity/: __init__.py  connectivity.py  minimum_phase_decomposition.py  simulate.py  statistics.py  transforms.py  utils.py  wrapper.py
tests/: conftest.py  test_advanced_connectivity.py  test_coherence_bounds.py  test_connectivity.py  test_error_messages.py  test_expectation_validation.py  test_gpu.py  test_gpu_request.py  test_metric_ranges.py  test_minimum_phase_decomposition.py  test_notebook_snapshots.py  test_notebooks.py  test_parameter_helpers.py  test_simulate.py  test_statistics.py  test_transforms.py  test_wrapper.py  test_wrapper_errors.py
tests/__snapshots__/: test_notebook_snapshots.ambr  test_notebooks.ambr
