[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "spectral_connectivity"
dynamic = ["version"]
description = "Frequency domain functional and directed connectivity analysis tools for electrophysiological data"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Eric Denovellis", email = "eric.denovellis@ucsf.edu" }]
license = { text = "GPL-3.0-only" }
keywords = [
    "python",
    "neuroscience",
    "electrophysiology",
    "multitaper",
    "spectrogram",
    "frequency-domain",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

dependencies = ["numpy>=1.21", "scipy>=1.7", "xarray>=0.20", "matplotlib>=3.4"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "nitime",
    "pytest-cov",
    "black",
    "flake8",
    "mypy>=1.0",
    "pydocstyle",
    "numpydoc",
]
gpu = ["cupy-cuda12x"]

[project.urls]
Homepage = "https://github.com/Eden-Kramer-Lab/spectral_connectivity"
Repository = "https://github.com/Eden-Kramer-Lab/spectral_connectivity"
Documentation = "https://spectral-connectivity.readthedocs.io/en/latest/"
"Bug Reports" = "https://github.com/Eden-Kramer-Lab/spectral_connectivity/issues"


[tool.pytest.ini_options]
addopts = "-q"

# Tool configurations for optional linting/formatting
[tool.black]
target-version = ["py39"]
line-length = 88

[tool.pydocstyle]
convention = "numpy"
add-ignore = [
    "D105",
    "D107",
    "D200",
    "D213",
    "D413",
] # Common exceptions for scientific code

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = true
disallow_untyped_defs = false          # Start lenient, can tighten later
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_return_any = false
warn_unreachable = true
show_error_codes = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "spectral_connectivity/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["spectral_connectivity"]
